<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.danteapps.android.grouptripalpha.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:text="@string/start" />

        <Button
            android:id="@+id/instr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instr"
            android:layout_below="@+id/start"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/instr"
            android:layout_centerHorizontal="true"
            android:text="@string/exit"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

</LinearLayout>
